--- a/Indeed_Web_Scraping.ipynb
+++ b/Indeed_Web_Scraping.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Indeed Web Scraping.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvHJoR1lSvC1Pc5gSpS7v+",
+      "authorship_tag": "ABX9TyPtmqpq/h0+InKXo6jJhxkx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "#**Web Scraping**\n",
         "*  **Web scraping is a term for various methods used to collect information from across the Internet.Web scraping is also called Web data extraction, screen scraping or Web harvesting.**\n",
         "\n",
-        "*  **In this project I am going to scrape data from amazon.in and collect the desired information. After that I will transfer the data in excel file.**\n"
+        "*  **In this project I am going to scrape data from amazon.in and collect the desired information. After that I will transfer the data in csv file.**\n"
       ],
       "metadata": {
         "id": "Qpa2U2GCdoyy"
